# sysprog-1

Day01/Session1/: CMakeLists.txt  dynamicmem.c  first  first.c  pointer01.c  sample  structuredemo.c  temp.txt  uniondemo.c
Day01/Session2/: funcptr.c  funcptrarray.c  funcptrexample01.c  funcptrexample02.c  linklistdemo.c  linklistempty.c  logname.c
Day02/: argsample02.c  classcodelinklist.c  compilerun.sh  debug01.c  debug02.c  debug03.c  inputargs.c  project1  template01.c  time01.c  time02.c  time03.c  time04.c
Day02/cmaketutorial/: CMakeLists.txt  sample.c
Day02/cmaketutorial/MathFunctions/: CMakeLists.txt  mysqrt.c
Day02/test/: app  my_lib.c  my_lib.h  myapp.c
Day02/test2/: app  app.c  library.c
Day03/: alarm02.c  app  ctrlcdemo.c  dirstat.c  filestat.c  parsefile.c  settimer01.c  settimer02.c  settimer03.c  settimerx.c  strtok01.c  strtok02.c
Day04/: app  client  client02.c  pthread-2.c  server.c  server02.c  servermulti.c  simplethread.c  threadex.c  threadseq.c
Day05/: fork-demo-1.c  mergesort.c  passvalue01.c  signalex.c
